--- a/css/site.css
+++ b/css/site.css
@@ -62,7 +62,7 @@ body {
 
 
 .hero p {
-    color: #828282;
+    color: #A2A2A2;
     font-size: 18px;
     font-family: 'Droid Serif', serif;
 }
@@ -142,8 +142,6 @@ body {
     text-align: right;
 }
 
-
-/* Custom page footer */
 .footer {
   margin-top: 120px;
 }
@@ -199,6 +197,7 @@ body {
     font-size: 10px;
 }
 
+
 @media (max-width: 768px) {
 
     body {
@@ -252,4 +251,40 @@ body {
       margin-top: 80px;
     }
 
+}
+
+/* ABOUT PAGE */
+.img-wide {
+  width:100%;
+  height:230px;
+  margin-top: 80px;
+  background-image:url('/images/about.jpg');
+  background-size: cover;
+}
+
+.about {
+    padding-top: 70px;
+}
+
+.about h1 {
+    font-size: 30px;
+    color: #EB3349;
+    font-weight: 800;
+    font-family: 'Source Sans Pro', sans-serif;
+    margin-bottom: 15px;
+
+}
+.about p a {
+    color: #EB3349;
+}
+.about p {
+    color: #A2A2A2;
+    font-size: 16px;
+    font-family: 'Droid Serif', serif;
+    text-align: justify;
+    line-height: 27px;
+    margin-bottom: 20px;
+}
+.about .btn {
+    margin-top: 50px;
 }
