--- a/css/site.css
+++ b/css/site.css
@@ -253,13 +253,21 @@ body {
 
 }
 
-/* ABOUT PAGE */
-.img-wide {
+
+.bg-image {
   width:100%;
   height:230px;
   margin-top: 80px;
-  background-image:url('/images/about.jpg');
   background-size: cover;
+}
+
+.about-image {
+    background-image:url('/images/about.jpg');
+
+}
+
+.blog-image {
+    background-image:url('/images/blog.jpg');
 }
 
 .about {
@@ -287,4 +295,48 @@ body {
 }
 .about .btn {
     margin-top: 50px;
+}
+
+.blog-posts {
+    margin-top: 90px;
+}
+
+.blog-posts a {
+    color: #EB3349;
+}
+.post {
+    margin-bottom: 25px;
+    padding-bottom: 25px;
+    border-bottom: 1px solid #E0E0E0;
+}
+.post h2 {
+    font-family: 'Source Sans Pro', sans-serif;
+    font-size: 24px;
+    font-weight: 700;
+    color: #EB3349;
+    line-height: 31px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+
+.post h3 {
+    font-family: 'Source Sans Pro', sans-serif;
+    font-weight: 400;
+    font-size: 18px;
+    color: #CCCCCC;
+    line-height: 25px;
+    margin-top: 0px;
+    margin-bottom: 15px;
+}
+.post p {
+    font-family: 'Droid Serif', serif;
+    font-size: 16px;
+    color: #A2A2A2;
+    line-height: 27px;
+}
+
+.more-posts {
+    text-align: right;
+    font-size: 15px;
+    font-family: 'Source Sans Pro', sans-serif;
 }
