--- a/css/site.css
+++ b/css/site.css
@@ -67,7 +67,7 @@ body {
     font-family: 'Droid Serif', serif;
 }
 
-.btn {
+.btn, .btn:focus {
     background: #EB3349;
     box-shadow: 0px 3px 0px 0px #C82336;
     border-radius: 3px;
