--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,3 @@
-
 <div class="container">
   <div class="header clearfix">
     <nav>
@@ -6,9 +5,15 @@
         <img alt="Thanos Theodoridis" src="/images/logo.png">
       </a>
       <ul class="nav navbar-nav pull-right links">
-        <li class="navbar-link"><a href="/">HOME</a></li>
-        <li class="navbar-link"><a href="/about/">ABOUT</a></li>
-        <li class="navbar-link"><a href="/blog/" class="active">BLOG</a></li>
+        <li class="navbar-link"><a
+          href="/"
+          class="{% if page.path contains 'index'%}active{% endif %}">HOME</a></li>
+        <li class="navbar-link"><a
+          href="/about/"
+          class="{% if page.path contains 'about'%}active{% endif %}">ABOUT</a></li>
+        <li class="navbar-link"><a
+          href="/blog/"
+          class="{% if page.path contains 'blog'%}active{% endif %}">BLOG</a></li>
       </ul>
     </nav>
 
