--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -13,9 +13,11 @@ layout: default
 
         {% for post in site.posts limit: 5 %}
         <div class="post">
-          <a href="{{ post.url }}"><h1>{{ post.title }}</h1></a>
+          <h1><a href="{{ post.url }}" class="post-title">{{ post.title }}</a></h1>
 
-          <h2>{{ post.date | date: "%B %d %Y" }}</h2>
+          <div class="post-timestamp">
+            <time>{{ post.date | date: "%B %d %Y" }}</time>
+          </div>
           {{ post.content | truncatewords: 50 }}
 
         </div>
