--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -1,5 +1,7 @@
 ---
 layout: default
+title: Blog - Thanos Theodoridis - Software Engineer
+description: Hello. I am Thanos. Node.js, Angular and iOS hacker. UX/UI Designer. Generalist, full-stack, real deal. I like startups, beer and women.
 ---
 
 
