fixed active link styling

--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -1,7 +1,8 @@
 ---
 layout: default
-title: About - Thanos Theodoridis - Software Engineer
+title: About - Thanos Theodoridis - Senior Technology Consultant
 description: Hello. I am Thanos. Node.js, Angular and iOS hacker. UX/UI Designer. Generalist, full-stack, real deal. I like startups, beer and women.
+active: about
 ---
 
 <div class="bg-image blog-image"></div>
