--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -1,7 +1,8 @@
 ---
 layout: default
-title: Blog - Thanos Theodoridis - Software Engineer
+title: Blog - Thanos Theodoridis - Senior Technology Consultant
 description: Hello. I am Thanos. Node.js, Angular and iOS hacker. UX/UI Designer. Generalist, full-stack, real deal. I like startups, beer and women.
+active: blog
 ---
 
 
@@ -31,4 +32,3 @@ description: Hello. I am Thanos. Node.js, Angular and iOS hacker. UX/UI Designer
 
 
 </div>
-
