--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,20 @@
 <footer class="footer text-center container">
   <ul class="list-inline">
-    <li><a href="/">HOME</a></li>
-    <li><a href="/about/">ABOUT</a></li>
-    <li><a class="active " href="/blog/">BLOG</a></li>
+    {% if page.active == "home" %}
+           <li><a class="active" href="#">HOME</a></li>
+       {% else %}
+           <li><a href="/">HOME</a></li>
+       {% endif %}
+       {% if page.active == "about" %}
+           <li><a class="active" href="/about/">ABOUT</a></li>
+       {% else %}
+           <li><a href="/about/">ABOUT</a></li>
+       {% endif %}
+       {% if page.active == "blog" %}
+           <li><a class="active" href="/blog/">BLOG</a></li>
+       {% else %}
+           <li><a href="/blog/">BLOG</a></li>
+       {% endif %}
   </ul>
   <div class="row">
     <div class="col-md-4 col-md-offset-4">
