--- a/css/site.css
+++ b/css/site.css
@@ -67,7 +67,7 @@ ol, ul {
 
 
 .hero p {
-    color: #A2A2A2;
+    color: #828282;
     font-size: 18px;
     font-family: 'Droid Serif', serif;
 }
@@ -128,6 +128,7 @@ ol, ul {
     font-weight: 800;
     color: #EB3349;
     margin-bottom: 5px;
+    margin-top: 10px;
 }
 
 .tech-lead > div > p {
@@ -291,7 +292,7 @@ ol, ul {
     color: #EB3349;
 }
 .about p {
-    color: #A2A2A2;
+    color: #828282;
     font-size: 16px;
     font-family: 'Droid Serif', serif;
     text-align: justify;
@@ -337,7 +338,7 @@ ol, ul {
 }
 
 .post-timestamp {
-    margin-bottom: 40px;
+    margin-bottom: 20px;
 }
 
 .post-timestamp time {
@@ -353,36 +354,55 @@ ol, ul {
 .post h1,h2,h3,h4,h5,h6 {
     font-family: 'Source Sans Pro', sans-serif;
     color: #333333;
-    margin-top: 0px;
-    margin-bottom: 10px;
+
 }
 
 .post h2 {
-    font-family: 'Source Sans Pro', sans-serif;
     font-size: 22px;
     font-weight: 700;
     line-height: 31px;
 }
 
 .post h3 {
-    font-family: 'Source Sans Pro', sans-serif;
-    font-weight: 400;
-    font-size: 18px;
+    font-weight: bold;
+    font-size: 20px;
     line-height: 25px;
+    /*margin-bottom: 20px;
+    margin-top: 40px;*/
+}
+
+.post h4 {
+    font-weight: bold;
+    /*margin-bottom: 5px;*/
+}
+.post h5 {
+    font-weight: bold;
+    font-size: 17px;
+    /*margin-top: 25px;
+    margin-bottom: 5px;*/
 }
 .post p {
     font-family: 'Droid Serif', serif;
     font-size: 16px;
-    color: #A2A2A2;
+    color: #828282;
     line-height: 27px;
-    margin-bottom: 15px;
+    margin-bottom: 20px;
 }
 
 .post code {
     color: #333333;
     background-color: rgb(228, 228, 228);
 }
-
+.post ol, ul {
+    color: #828282;
+    font-family: 'Droid Serif', serif;
+    font-size: 16px;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 0px;
+    padding-bottom: 0px;
+    margin-bottom: 20px;
+}
 .post pre {
     background-color: white;
 }
