--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,14 @@
 <footer class="footer text-center container">
   <ul class="list-inline">
-    <li><a href="/">HOME</a></li>
-    <li><a href="/about/">ABOUT</a></li>
-    <li><a class="active " href="/blog/">BLOG</a></li>
+    <li><a
+      href="/"
+      class="{% if page.path contains 'index'%}active{% endif %}">HOME</a></li>
+    <li><a
+      href="/about/"
+      class="{% if page.path contains 'about'%}active{% endif %}">ABOUT</a></li>
+    <li><a
+      href="/blog/"
+      class="{% if page.path contains 'blog'%}active{% endif %}">BLOG</a></li>
   </ul>
   <div class="row">
     <div class="col-md-4 col-md-offset-4">
