--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,17 +2,17 @@
   <ul class="list-inline">
     <li><a
       href="/"
-      class="{% if page.path contains 'index'%}active{% endif %}">HOME</a></li>
-    <li><a
-      href="/about/"
-      class="{% if page.path contains 'about'%}active{% endif %}">ABOUT</a></li>
-    <li><a
-      href="/blog/"
-      class="{% if page.path contains 'blog'%}active{% endif %}">BLOG</a></li>
+      class="{% if page.path ==  'index.html'%}active{% endif %}">HOME</a></li>
+      <li><a
+        href="/about/"
+        class="{% if page.path contains 'about/'%}active{% endif %}">ABOUT</a></li>
+      <li><a
+        href="/blog/"
+        class="{% if page.path contains '_posts/' or page.path contains 'blog'%}active{% endif %}">BLOG</a></li>
   </ul>
   <div class="row">
     <div class="col-md-4 col-md-offset-4">
-      <p>“Success is walking from failure to failure with no loss of enthusiasm.”</p>
+      <p>{% if page.quote %}{{ page.quote }}{% else %}{{ site.quote }}{% endif %}</p>
     </div>
   </div>
   <div class="license row">
