--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,13 +7,13 @@
       <ul class="nav navbar-nav pull-right links">
         <li class="navbar-link"><a
           href="/"
-          class="{% if page.path contains 'index'%}active{% endif %}">HOME</a></li>
+          class="{% if page.path ==  'index.html'%}active{% endif %}">HOME</a></li>
         <li class="navbar-link"><a
           href="/about/"
-          class="{% if page.path contains 'about'%}active{% endif %}">ABOUT</a></li>
+          class="{% if page.path contains 'about/'%}active{% endif %}">ABOUT</a></li>
         <li class="navbar-link"><a
           href="/blog/"
-          class="{% if page.path contains 'blog'%}active{% endif %}">BLOG</a></li>
+        class="{% if page.path contains '_posts/' or page.path contains 'blog'%}active{% endif %}">BLOG</a></li>
       </ul>
     </nav>
 
