--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,9 +7,31 @@
 
   <meta name="author" content="Thanos Theodoridis">
 
+  <!-- FB -->
+  <meta property="og:title"
+        content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}"/>
+  <meta property="og:site_name" content="{{ site.title }}"/>
+  <meta property="og:url"
+        content="{{ site.url }}{{ page.url }}"/>
+  <meta property="og:image" content="{{ site.url }}/images/posts/{{ page.post_image }}"/>
+  <meta property="og:description"
+        content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ page.description }}{% endif %}">
+  <meta property="article:author" content="Thanos Theodoridis" />
+  <meta property="article:publisher" content="http://attheo.do" />
+  <!-- FB -->
+
+  <!-- TW -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:site" content="@attheodo">
+  <meta name="twitter:creator" content="@attheodo">
+  <meta name="twitter:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}"/>
+  <meta name="twitter:description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ page.description }}{% endif %}">
+  <meta name="twitter:image" content="{{ site.url }}/images/posts/{{ page.post_image }}">
+  <!-- TW -->
+
   <link rel="shortcut icon" type="image/png" href="/favicon.png"/>
 
-  <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700,900|Droid+Serif' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700,900|Merriweather:400,300,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
   <link href="/css/site.css" rel="stylesheet">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
