fixed active link

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,7 +13,7 @@
           class="{% if page.path contains 'about'%}active{% endif %}">ABOUT</a></li>
         <li class="navbar-link"><a
           href="/blog/"
-          class="{% if page.path contains 'blog'%}active{% endif %}">BLOG</a></li>
+          class="{% if page.path contains 'blog' or page.active == "blog" %}active{% endif %}">BLOG</a></li>
       </ul>
     </nav>
 
