various changes here and there

--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -5,7 +5,7 @@ description: Hello. I am Thanos. Node.js, Angular and iOS hacker. UX/UI Designer
 active: about
 ---
 
-<div class="bg-image blog-image"></div>
+<div class="bg-image about-image"></div>
 
 <div class="container">
   <div class="row hello">
