--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Blog - Thanos Theodoridis - Senior Technology Consultant
-description: Hello. I am Thanos. Node.js, Angular and iOS hacker. UX/UI Designer. Generalist, full-stack, real deal. I like startups, beer and women.
+description: Various thoughts on various matters. Opinions solely my own.
 active: blog
 ---
 
@@ -21,7 +21,7 @@ active: blog
           <div class="post-timestamp">
             <time>{{ post.date | date: "%B %d %Y" }}</time>
           </div>
-          {{ post.content | truncatewords: 50 }}
+          {{ post.content | truncatewords: 40 }}
 
         </div>
         {% endfor %}
