--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,9 +1,10 @@
 ---
 layout: default
+active: blog
 ---
 
 
-<div class="bg-image blog-image"></div>
+<div class="bg-image" style="background-image: url(/images/posts/{{ page.post_image }})"></div>
 
 <div class="container">
 
