added custom quotes on footer

--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -3,6 +3,7 @@ layout: default
 title: About - Thanos Theodoridis - Senior Technology Consultant
 description: Hello. I am Thanos. Node.js, Angular and iOS hacker. UX/UI Designer. Generalist, full-stack, real deal. I like startups, beer and women.
 active: about
+quote: Always do your best. What you plant now, you will harvest later.
 ---
 
 <div class="bg-image about-image"></div>
