--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -3,6 +3,7 @@ layout: default
 title: Blog - Thanos Theodoridis - Senior Technology Consultant
 description: Various thoughts on various matters. Opinions solely my own.
 active: blog
+quote: The things that we love tell us what we are.
 ---
 
 
