--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,7 +18,7 @@
   </ul>
   <div class="row">
     <div class="col-md-4 col-md-offset-4">
-      <p>“Success is walking from failure to failure with no loss of enthusiasm.”</p>
+      <p>“{% if page.quote %}{{ page.quote }}{% else %}{{ site.quote }}{% endif %}”</p>
     </div>
   </div>
   <div class="license row">
