--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,7 +13,7 @@
   <meta property="og:site_name" content="{{ site.title }}"/>
   <meta property="og:url"
         content="{{ site.url }}{{ page.url }}"/>
-  <meta property="og:image" content="{{ site.url }}/images/posts/{{ page.post_image }}"/>
+  <meta property="og:image" content="{{ site.url }}/images/posts/{{ page.facebook_image }}"/>
   <meta property="og:description"
         content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ page.description }}{% endif %}">
   <meta property="article:author" content="Thanos Theodoridis" />
