fixed author meta tag

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,7 +14,7 @@
   <meta property="og:image" content="{{ site.url }}/images/posts/{{ page.facebook_image }}"/>
   <meta property="og:site_name" content="Thanos Theodoridis - Senior Technology Consultant"/>
   <meta property="og:description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ page.description }}{% endif %}"/>
-  <meta property="article:author" content="Thanos Theodoridis" />
+  <meta property="article:author" content="http://facebook.com/attheodo" />
   <!-- FB -->
 
   <!-- TW -->
