shamelessly added referral link for harvest app on footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -27,7 +27,8 @@
         <img alt="Creative Commons License" style="border-width:0"
              src="https://i.creativecommons.org/l/by-nc-nd/4.0/88x31.png"/></a><br/>
       This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/">Creative
-      Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>.
+      Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>.<br><br>
+      <a href="http://try.hrv.st/1-008818?b" title="Painless time tracking"><img src="https://www.getharvest.com/images/referrals/harvest_banner_130x60.png" height="60" width="130" border="0" alt="Harvest time tracking" /></a>
     </div>
   </div>
 </footer>
