--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: About - Thanos Theodoridis - Senior Technology Consultant
-description: Hello. I am Thanos. Node.js, Angular and iOS hacker. UX/UI Designer. Generalist, full-stack, real deal. I like startups, beer and women.
+description: description: Hello. My name is Thanos. Senior iOS Developer. UX/UI Designer. Generalist, full-stack, real deal. On a mission to bring your mobile and web strategy into life.
 active: about
 quote: Always do your best. What you plant now, you will harvest later.
 ---
