--- a/_includes/head.html
+++ b/_includes/head.html
@@ -28,6 +28,7 @@
   <link rel="shortcut icon" type="image/png" href="/favicon.png"/>
 
   <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700,900|Merriweather:400,300,700' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
   <link href="/css/site.css" rel="stylesheet">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
