--- a/css/site.css
+++ b/css/site.css
@@ -49,17 +49,14 @@ hr {
     font-weight: 800;
     font-family: 'Source Sans Pro', sans-serif;
     margin-bottom: 15px;
-
 }
+
 .social-icons > li {
     margin-top: 20px;
     margin-left: 25px;
-    -webkit-transition: all 0.3s ease;
-    transition: all 0.3s ease;
 }
 
 .social-icons > li:hover {
-    transform: scale(0.9)
 }
 
 .social-icons > li:first-child {
@@ -70,6 +67,39 @@ hr {
     margin-right: 0;
 }
 
+.social-icon {
+    width: 38px;
+    height: 38px;
+    font-size: 21px;
+    line-height: 34px;
+    display: inline-block;
+    text-align: center;
+    color: #EB3349;
+    border: 2px solid #EB3349;
+    border-radius: 50%;
+    -webkit-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+    -webkit-filter: blur(0);
+}
+
+.social-icon:hover,
+.social-icon:focus {
+    color: #EB3349;
+    transform: scale(.9);
+}
+
+.social-icon .fa-send {
+    font-size: 16px;
+    position: relative;
+    top: -2px;
+    left: -2px;
+}
+
+.social-icon .fa-linkedin {
+    font-size: 20px;
+    position: relative;
+    top: -1px;
+}
 
 .hero p {
     color: #828282;
