--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,51 +1,57 @@
 <head>
   <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
-  <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ page.description }}{% endif %}">
+  <meta name="robots" content="index,follow">
+  {% assign site_title = site.title | default: site.name %}
+  {% assign page_title = page.title | default: site_title %}
+  {% assign page_description = page.description | default: site.description %}
+  {% if page.excerpt %}
+    {% assign page_description = page.excerpt | strip_html | strip_newlines | truncate: 160 %}
+  {% endif %}
+  {% assign canonical_url = page.url | replace: 'index.html', '' | prepend: site.baseurl | prepend: site.url %}
+  {% assign image_path = page.facebook_image | default: page.post_image | default: site.default_image | default: "assets/images/logo.png" %}
+  {% if image_path contains "http" %}
+    {% assign image_url = image_path %}
+  {% else %}
+    {% assign image_url = image_path | prepend: "/" | prepend: site.baseurl | prepend: site.url %}
+  {% endif %}
+  <title>{{ page_title }}</title>
+  <meta name="description" content="{{ page_description }}">
 
-  <!-- FB -->
-  <meta property="og:site_name" content="{{ site.name }}" />
-  <meta property="og:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}" />
-  <meta property="og:type" content="article" />
-  <meta property="og:url" content="{{ site.url }}{{ page.url }}" />
-  <meta property="og:image" content="{{ site.url }}/images/posts/{{ page.facebook_image }}" />
-  <meta property="og:description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ page.description }}{% endif %}" />
-  <meta property="article:author" content="https://www.facebook.com/attheodo" />
-  <meta property="article:publisher" content="https://www.facebook.com/attheodo" />
-  <!-- FB -->
 
-  <!-- TW -->
+  <meta name="author" content="{{ site.name }}">
+  <meta property="og:site_name" content="{{ site.name }}">
+  <meta property="og:title" content="{{ page_title }}">
+  <meta property="og:description" content="{{ page_description }}">
+  <meta property="og:url" content="{{ canonical_url }}">
+  <meta property="og:type" content="{% if page.layout == 'post' %}article{% else %}website{% endif %}">
+  <meta property="og:image" content="{{ image_url }}">
+  <meta property="article:author" content="https://www.facebook.com/attheodo">
+  <meta property="article:publisher" content="https://www.facebook.com/attheodo">
+
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@attheodo">
   <meta name="twitter:creator" content="@attheodo">
-  <meta name="twitter:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}"/>
-  <meta name="twitter:description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ page.description }}{% endif %}">
-  <meta name="twitter:image" content="{{ site.url }}/images/posts/{{ page.post_image }}">
-  <!-- TW -->
+  <meta name="twitter:title" content="{{ page_title }}">
+  <meta name="twitter:description" content="{{ page_description }}">
+  <meta name="twitter:image" content="{{ image_url }}">
 
-  <link rel="shortcut icon" type="image/png" href="/favicon.png"/>
+  <link rel="canonical" href="{{ canonical_url }}">
+  <link
+    rel="icon"
+    type="image/png"
+    href="/favicon.png">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tabler/icons-webfont@latest/dist/tabler-icons.min.css" />
+  <link href="/assets/css/main.css" rel="stylesheet">
 
-  <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700,900|Merriweather:400,300,700' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-  <link href="/css/site.css" rel="stylesheet">
-  <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
-
-  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-  <!--[if lt IE 9]>
-  <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-  <![endif]-->
   <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-66866434-1', 'auto');
-  ga('send', 'pageview');
+      ga('create', 'UA-66866434-1', 'auto');
+      ga('send', 'pageview');
 
-</script>
+  </script>
 </head>
