--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,35 +1,18 @@
 ---
 layout: default
 active: blog
-quote: The currency of blogging is authenticity and trust.
 ---
 
-
-<div class="bg-image" style="background-image: url(/images/posts/{{ page.post_image }})"></div>
-
-<div class="container">
-
-  <div class="back-to-posts-link">
-    <a href="/blog/">← Back to posts</a>
-  </div>
-
-  <div class="container post">
-    <div class="row hello">
-      <div class="col-md-8 col-md-offset-2">
-        <div class="title">
-          {{ page.title }}
-        </div>
-        <div class="post-timestamp">
-          <time datetime="{{page.date|date: \"%F\"}}">{{page.date|date:"%b %d, %Y"}}</time>
-        </div>
-
-        {% include share.html %}
-
-        {{ content }}
-
-        {% include share.html %}
-
-      </div>
-    </div>
+<a href="/blog/" class="nav-link text-sm">← Back to all posts</a>
+<div class="space-y-2 my-8">
+  <h1 class="text-xl font-extrabold text-gray-500">
+    {{ page.title }}
+  </h1>
+  <div>
+    <time class="text-base text-gray-300" datetime='{{ page.date|date: \"%F\"}}'>{{ page.date | date: "%b·%d·%Y" }}</time>
   </div>
 </div>
+<article class="prose max-w-none prose-p:text-gray-400 prose-headings:text-gray-500">
+  {{ content }}
+</article>
+{% include share.html %}
