fixes for sm breakpoint

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 
 {% include head.html %}
 
-  <body class="page-{{ page.layout | default: 'default' }} bg-snow-50 max-w-2xl mx-auto font-menlo">
+  <body class="page-{{ page.layout | default: 'default' }} bg-snow-50 max-w-2xl mx-auto font-menlo px-4 md:px-0">
     {% include header.html %}
 
     <main id="main-content" role="main">
