--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,7 +17,7 @@
     {% endif %}
   {% endif %}
   <div class="flex items-center justify-between">
-    <div class="flex gap-4 items-start">
+    <div class="flex flex-col md:flex-row gap-4 items-start">
       <img
         src="/assets/images/logo.svg"
         class="h-12"
